--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
-<!DOCTYPE html> <html lang="zh-CN"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>黄金矿工 - 经典挖矿游戏</title> <!-- 引入外部资源 --> <script src="https://cdn.tailwindcss.com"></script> <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet"> <!-- Tailwind 配置 --> <script> tailwind.config = { theme: { extend: { colors: { primary: '#D4AF37', // 金色主题色 secondary: '#8B4513', // 棕色辅助色 dark: '#1A1A1A', light: '#F5F5F5', }, fontFamily: { mining: ['"Press Start 2P"', 'cursive'], sans: ['Inter', 'sans-serif'], }, }, } } </script> <!-- 自定义工具类 --> <style type="text/tailwindcss"> @layer utilities { .content-auto { content-visibility: auto; } .text-shadow { text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); } .animate-bob { animation: bob 2s ease-in-out infinite; } .animate-pulse-slow { animation: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite; } .scrollbar-hide::-webkit-scrollbar { display: none; } } /* 全局动画定义 */ @keyframes bob { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } } /* 游戏画布样式 */ canvas { display: block; touch-action: none; user-select: none; -webkit-user-select: none; } </style> <!-- 额外字体引入 --> <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> </head> <body class="bg-gradient-to-b from-dark to-secondary min-h-screen text-light overflow-x-hidden font-sans"> <!-- 页面加载动画 --> <div id="loader" class="fixed inset-0 bg-dark flex flex-col items-center justify-center z-50 transition-opacity duration-1000"> <div class="text-primary text-4xl md:text-6xl mb-6 animate-bob"> <i class="fa fa-diamond"></i> </div> <h1 class="font-mining text-2xl md:text-4xl text-primary mb-4 text-shadow">黄金矿工</h1> <div class="w-48 h-2 bg-gray-700 rounded-full overflow-hidden"> <div id="progress-bar" class="h-full bg-primary w-0 transition-all duration-300"></div> </div> <p class="mt-4 text-gray-400">加载游戏资源中...</p > </div> <!-- 游戏容器 --> <div id="game-container" class="container mx-au
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8" />
+  <title>黄金挖矿 - 黄金挖矿小游戏</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <style>
+    * {margin:0;padding:0;box-sizing:border-box;}
+    body {
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","PingFang SC",sans-serif;
+      min-height: 100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background: radial-gradient(circle at top, #ffe9a8 0, #f0b43c 30%, #3b2a1a 85%);
+      overflow:hidden;
+      color:#fff;
+    }
+    .container {
+      text-align:center;
+      padding:40px 32px;
+      background: rgba(0,0,0,0.25);
+      border-radius:24px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.45);
+      position:relative;
+      max-width:420px;
+      width:90%;
+    }
+    .logo {
+      font-size:40px;
+      margin-bottom:12px;
+    }
+    .title {
+      font-size:32px;
+      letter-spacing:4px;
+      font-weight:700;
+      text-shadow:0 4px 10px rgba(0,0,0,.4);
+    }
+    .subtitle {
+      margin-top:8px;
+      font-size:14px;
+      opacity:.9;
+    }
+    .progress {
+      margin:24px auto 8px;
+      width:100%;
+      max-width:280px;
+      height:8px;
+      border-radius:999px;
+      background:rgba(255,255,255,0.15);
+      overflow:hidden;
+    }
+    .progress-bar {
+      width:0;
+      height:100%;
+      border-radius:999px;
+      background:linear-gradient(90deg,#ffe27a,#ffce3a,#fffb96);
+      animation:loading 2.5s linear infinite;
+    }
+    @keyframes loading {
+      0% {width:0;}
+      50% {width:80%;}
+      100% {width:100%;}
+    }
+    .loading-text {
+      font-size:13px;
+      margin-top:4px;
+      opacity:.9;
+    }
+    .start-btn {
+      margin-top:24px;
+      padding:10px 26px;
+      font-size:16px;
+      border-radius:999px;
+      border:none;
+      cursor:pointer;
+      color:#3b2500;
+      background:linear-gradient(135deg,#ffeb8a,#ffd44a,#ffb937);
+      box-shadow:0 10px 20px rgba(0,0,0,0.35);
+      font-weight:600;
+      transition:transform .15s ease, box-shadow .15s ease;
+    }
+    .start-btn:hover {
+      transform:translateY(-2px);
+      box-shadow:0 14px 26px rgba(0,0,0,0.45);
+    }
+    .start-btn:active {
+      transform:translateY(0);
+      box-shadow:0 6px 12px rgba(0,0,0,0.35);
+    }
+    .coins {
+      position:absolute;
+      inset:0;
+      pointer-events:none;
+      overflow:hidden;
+      z-index:-1;
+    }
+    .coin {
+      position:absolute;
+      width:28px;
+      height:28px;
+      border-radius:50%;
+      background:radial-gradient(circle at 30% 30%,#fff7c1,#ffdf6b,#f5b835);
+      box-shadow:0 0 10px rgba(0,0,0,0.4);
+      animation:fall linear forwards;
+      opacity:0.9;
+    }
+    @keyframes fall {
+      0% {transform:translateY(-60px) rotate(0deg); opacity:0;}
+      10%{opacity:1;}
+      100%{transform:translateY(110vh) rotate(360deg); opacity:0;}
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="coins" id="coin-container"></div>
+
+    <div class="logo">💰</div>
+    <div class="title">黄金挖矿</div>
+    <div class="subtitle">深埋地底的宝藏，就等你来挖</div>
+
+    <div class="progress">
+      <div class="progress-bar"></div>
+    </div>
+    <div class="loading-text" id="loading-text">加载游戏资源中...</div>
+
+    <!-- 这里可以替换成你的真实开始逻辑 -->
+    <button class="start-btn" onclick="startGame()">开始挖金矿</button>
+  </div>
+
+  <script>
+    // 金币飞的效果
+    const container = document.getElementById('coin-container');
+    function spawnCoin() {
+      const coin = document.createElement('div');
+      coin.className = 'coin';
+      const startX = Math.random() * 100; // 百分比
+      const duration = 4 + Math.random() * 3; // 4~7 秒
+      coin.style.left = startX + 'vw';
+      coin.style.animationDuration = duration + 's';
+      container.appendChild(coin);
+      setTimeout(()=> coin.remove(), duration * 1000);
+    }
+    // 持续生成金币
+    setInterval(spawnCoin, 500);
+
+    // 这里接你的真实开始游戏逻辑
+    function startGame() {
+      document.getElementById('loading-text').innerText = '正在进入游戏...';
+      // TODO: 把你原来开始游戏的代码放到这里，比如：
+      // window.location.href = 'game.html';
+      // 或者 显示 canvas / 场景 等
+    }
+  </script>
+</body>
+</html>
